# treepy

./: README.md  install-linux.sh  pyproject.toml
src/: tree.py
