[build-system]
requires = ["hatchling", "argparse", "colorama"]
build-backend = "hatchling.build"

[project]
name = "treepy"
version = "0.1.0"
authors = [
    { name = "pi4erd", email = "piuuttri@gmail.com" }
]
description = "A tree program in python"
requires-python = ">=3.7"

[tool.hatch.build.targets.wheel]
packages = ["src/tree.py"]
